// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Link /> component Should render a disabled html link element 1`] = `
.emotion-0 {
  color: #00677F;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  opacity: 0.4;
  pointer-events: none;
  font-weight: 400;
  font-size: 16px;
  line-height: 21.44px;
  letter-spacing: normal;
  margin: 0;
  text-transform: none;
}

<div>
  <a
    class="emotion-0 emotion-1"
    data-testid="link"
    disabled=""
    href="/"
  >
    Redirect To
  </a>
</div>
`;

exports[`<Link /> component Should render a html link element with the correct title 1`] = `
.emotion-0 {
  color: #00677F;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  font-weight: 400;
  font-size: 16px;
  line-height: 21.44px;
  letter-spacing: normal;
  margin: 0;
  text-transform: none;
}

<div>
  <a
    class="emotion-0 emotion-1"
    data-testid="link"
    href="/"
  >
    Redirect To
  </a>
</div>
`;

exports[`<Link /> component Should render a html underlined link element with the correct title 1`] = `
.emotion-0 {
  color: #00677F;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  font-weight: 400;
  font-size: 16px;
  line-height: 21.44px;
  letter-spacing: normal;
  margin: 0;
  text-transform: none;
}

<div>
  <a
    class="emotion-0 emotion-1"
    data-testid="link"
    href="/"
  >
    Redirect To
  </a>
</div>
`;

exports[`<Link /> component Should render an anchor element with button styles 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  cursor: pointer;
  width: 100%;
  min-width: 80px;
  -webkit-transition: background-color 0.2s ease-in-out,color 0.2s ease-in-out;
  transition: background-color 0.2s ease-in-out,color 0.2s ease-in-out;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 8px;
  border-radius: 0px;
  font-weight: 700;
  font-size: 0.875rem;
  line-height: 1.25rem;
  letter-spacing: normal;
  margin: 0;
  text-transform: none;
  padding: 12px 24px;
  border: 0;
  color: #FFFFFF;
  background-color: #00677F;
}

.emotion-0:hover {
  color: #FFFFFF;
  background-color: #004355;
}

.emotion-0:disabled {
  cursor: not-allowed;
  opacity: 38%;
}

@media only screen and (min-width: 600px) {
  .emotion-0 {
    width: auto;
  }
}

<div>
  <a
    class="emotion-0 emotion-1"
    color="primary"
    data-testid="link-button"
    href="/"
  >
    Redirect To
  </a>
</div>
`;
